# oxlearn

./: .gitattributes  .gitignore  pyproject.toml  setup.py
src/oxlearn/: __main__.py  _version.py  board.py  play.py  randomplayer.py
src/oxlearn/training/: __init__.py  dihedral.py  learnplayer.py  permutation.py
tests/: test_board.py  test_dihedral.py  test_permutation.py
